--- a/view/jurisdictionManage/config_gurisdiction.html
+++ b/view/jurisdictionManage/config_gurisdiction.html
@@ -12,9 +12,6 @@
 		<link rel="stylesheet" href="../../css/knowledge/noBiaoSetKnowledge.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/zTreeStyle/zTreeStyle.css" />
 		<style type="text/css">
-			.layui-layer-content {
-				height: 178px !important;
-			}
 		</style>
 	</head>
 
@@ -29,7 +26,7 @@
 			<div class="numshu_btm state" style="border-top: 1px solid #CCD2D8;">
 				<div class="form-group clearFix">
 					<label class="col-sm-1">角色名称</label>
-					<label class="col-sm-2 gurisdictionname">题库管理员</label>
+					<label class="col-sm-2 gurisdictionname"></label>
 				</div>
 			</div>
 			<div class="" style="min-height: 250px;height: auto;padding: 10px;border: 1px solid #CCD2D8;">
