--- a/view/userManage/admin_edit.html
+++ b/view/userManage/admin_edit.html
@@ -69,7 +69,7 @@
 							<span class="warn" style="padding-left: 20px;">所属角色</span>
 						</label>
 						<div class="col-sm-8">
-							<select  id="admin_roles" class="selectpicker form-control organization" multiple=”multiple”>
+							<select  id="admin_roles" class="selectpicker form-control organization" multiple>
 						     
 						    </select>
 						</div>
@@ -93,6 +93,7 @@
 	<script type="text/javascript" src="../../js/bootstrap.min.js" ></script>
 	<script type="text/javascript" src="../../plugin/bootstrap-select/js/bootstrap-select.min.js" ></script>
 	<script type="text/javascript" src="../../plugin/layer/layer.js"></script>
-	<script type="text/javascript" src="../../js/userManage/add_admin.js" ></script>
 	<script src="../../js/dataUrl.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript" src="../../js/userManage/add_admin.js" ></script>
+	
 </html>
