--- a/view/userManage/student_add.html
+++ b/view/userManage/student_add.html
@@ -154,7 +154,7 @@
 							<span class="" style="padding-left: 20px;">家长姓名</span>
 						</label>
 						<div class="col-sm-3">
-							<input type="text" name="patriarch1_name" id="patriarch1_name" class="form-control" v-model="pnameone" />
+							<input type="text" name="patriarch1_name" id="patriarch1_name" maxlength="20" class="form-control" v-model="pnameone" />
 						</div>
 						<label class="col-sm-2 control-label text-right">
 							<span class="" style="padding-left: 20px;">手机号</span>
@@ -199,7 +199,7 @@
 							<span class="" style="padding-left: 20px;">家长姓名</span>
 						</label>
 						<div class="col-sm-3">
-							<input type="text" name="patriarch2_name" id="patriarch2_name" class="form-control" v-model="pnametwo" />
+							<input type="text" name="patriarch2_name" id="patriarch2_name" class="form-control" maxlength="20" v-model="pnametwo" />
 						</div>
 						<label class="col-sm-2 control-label text-right">
 							<span class="" style="padding-left: 20px;">手机号</span>
