--- a/view/dataManage/version/addVersion.html
+++ b/view/dataManage/version/addVersion.html
@@ -21,7 +21,7 @@
 					<div class="form-group" style="height: 34px;">
 						<label for="" class="col-sm-1 control-label text-center warn">版本名称</label>
 						<div class="col-sm-2">
-							<input class="form-control" type="text" placeholder="" v-model="title">
+							<input class="form-control" type="text" placeholder="" name="email" v-validate="'required|email'" v-model="title">
 						</div>
 					</div>
 					<div class="form-group" style="height: 34px;">
@@ -45,7 +45,14 @@
 	<script type="text/javascript" src="../../../plugin/vue/vue.js"></script>
 	<script type="text/javascript" src="../../../js/dataManage/apicontainer.js" ></script>
 	<script type="text/javascript" src="../../../js/commonutil.js" ></script>
+	<script type="text/javascript" src="../../../js/checkutil.js" ></script>
+	<script src="../../../js/vue/vue.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://cdn.jsdelivr.net/vee-validate/2.0.0-rc.3/vee-validate.min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
+		Vue.use(VeeValidate);
+		console.log(VeeValidate)
+		
+		
 		var vvm = null;
 
 		$(document).ready(function() {
@@ -62,8 +69,9 @@
 				},
 				methods:{
 					add: function(event){
+						console.log(vvm.sn)
 						addVersion(function(resp){
-							promptMsg("添加成功", function(){
+							layer.alert("添加成功", function(){
 								window.location.href = 'versionManage_list.html';
 							});
 						}, this.title, this.sn, this.note);
