--- a/view/dataManage/version/versionManage_list.html
+++ b/view/dataManage/version/versionManage_list.html
@@ -16,6 +16,12 @@
 			[v-cloak] {
 			  display: none;
 			}
+			td.notes{
+				width: 30em;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 		</style>
 		<div class="main container-fluid">
 			<div class="row head">
@@ -25,7 +31,7 @@
 			</div>
 			<div id="versions" class="numshu_btm state" style="border-top: 1px solid #CCD2D8;" v-cloak>
 				<div class="table-responsive" >
-					<table id="pointTable" class="table addlist text-center" style="border: 1px solid #CFCFCF;border-top: none;">
+					<table id="pointTable" class="table addlist text-center" style="border: 1px solid #CFCFCF;border-top: none;table-layout:fixed;">
 						<tr>
 							<td><strong>序号</strong></td>
 							<td><strong>版本名称</strong></td>
@@ -38,7 +44,7 @@
 							<td>{{(page - 1) * pagesize + index + 1}}</td>
 							<td>{{item.title}}</td>
 							<td>{{item.sn}}</td>
-							<td>{{item.note}}</td>
+							<td class="notes">{{item.note}}</td>
 							<td v-if="item.valid == '1'">启用</td>
 							<td v-else>禁用</td>
 							<td>
@@ -89,7 +95,7 @@
 					enableValid: function(event, index){
 						var tmpvalid = (this.versions[index]['valid'] == "1" ? "0" : "1");
 						enableVersion(function(){
-							promptMsg("成功");
+							layer.alert("成功");
 							this.vvm.versions[index]['valid'] = tmpvalid;
 						}, this.versions[index]['id'], tmpvalid);
 					}
