--- a/view/jurisdictionManage/config_user.html
+++ b/view/jurisdictionManage/config_user.html
@@ -67,7 +67,7 @@
 			<div class="numshu_btm state" style="border-top: 1px solid #CCD2D8;">
 				<div class="form-group clearFix">
 					<label class="col-sm-1">角色名称:</label>
-					<label class="col-sm-2 rolename">题库管理员</label>
+					<label class="col-sm-8 rolename"></label>
 				</div>
 				<div class="form-group clearFix">
 					<label class="col-sm-1"></label>
@@ -156,7 +156,9 @@
 						},
 						success: function(data){
 							if (data==1) {
-								layer.alert('保存成功！');
+								layer.alert('保存成功！',function(){
+									window.location.href = 'role_list.html';
+								});
 							}else{
 								layer.alert('保存失败！');
 							}
@@ -185,7 +187,14 @@
 			}
 			return params;
 		};
-		$('.rolename').text(decodeURIComponent(getUrlParams().name));
+		console.log(getUrlParams().name)
+		try{
+			var rolename = decodeURIComponent(getUrlParams().name);
+		}catch(e){
+			rolename = getUrlParams().name;
+		}
+		$('.rolename').text(rolename);
+		
 		$(document).on('click','.beselect li,.selected li',function(){
 			$('.beselect li,.selected li').removeClass('active');
 			$(this).addClass('active');
