--- a/view/organizationalManage/schoolManage.html
+++ b/view/organizationalManage/schoolManage.html
@@ -16,6 +16,7 @@
 			[v-cloak] {
 			  display: none;
 			}
+			.schoolnamewidth{max-width: 200px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 		</style>
 	</head>
 	
@@ -56,8 +57,8 @@
 							</thead>
 							<tbody id="schools">
 								<tr v-for="(vals,index) in data">
-									<td>{{vals.id}}</td>
-									<td>{{vals.name}}</td>
+									<td>{{index+1}}</td>
+									<td class="schoolnamewidth">{{vals.name}}</td>
 									<td>{{vals.institutionname}}</td>
 									<td>{{vals.lastupdate}}</td>
 									<td>
@@ -110,7 +111,7 @@
 						if(schoolname==""){
 							window.location.reload();
 						}else{
-							pages(schoolname)
+							pages(schoolname.trim())
 						}
 						
 						
@@ -140,6 +141,14 @@
 					url: org_url + dataUrl.schoolLists,
 					data: datajson,
 					success: function(data) {
+						if (data.code=='10010') {
+							layer.alert('身份验证失败！请重新登录！',{yes:function(){
+								parent.location.href = "../../enter.html";
+							},cancel:function(){
+								parent.location.href = "../../enter.html";
+							}});
+							return false;
+						}
 						school.data = data.data;
 						schoolcount = data.total;
 						$('#pageToolbar').Paging({
@@ -155,6 +164,14 @@
 									url: org_url + dataUrl.schoolLists,
 									data: datajson,
 									success: function(data){
+										if (data.code=='10010') {
+											layer.alert('身份验证失败！请重新登录！',{yes:function(){
+												parent.location.href = "../../enter.html";
+											},cancel:function(){
+												parent.location.href = "../../enter.html";
+											}});
+											return false;
+										}
 										school.data = data.data;
 									}
 								});
@@ -166,6 +183,14 @@
 									url: org_url + dataUrl.schoolLists,
 									data: datajson,
 									success: function(data){
+										if (data.code=='10010') {
+											layer.alert('身份验证失败！请重新登录！',{yes:function(){
+												parent.location.href = "../../enter.html";
+											},cancel:function(){
+												parent.location.href = "../../enter.html";
+											}});
+											return false;
+										}
 										school.data = data.data;
 									}
 								});
