--- a/view/userManage/admin_add.html
+++ b/view/userManage/admin_add.html
@@ -54,13 +54,13 @@
 							<span class="warn" style="padding-left: 20px;">姓名</span>
 						</label>
 						<div class="col-sm-3">
-							<input type="text" name="admin_name" id="admin_name" class="form-control" value="" />
+							<input type="text" name="admin_name" id="admin_name" maxlength="20" class="form-control" value="" />
 						</div>
 						<label class="col-sm-2 control-label text-right">
 							<span class="warn" style="padding-left: 20px;">手机号</span>
 						</label>
 						<div class="col-sm-3">
-							<input type="text" name="admin_phone" id="admin_phone" class="form-control" value="" />
+							<input type="text" name="admin_phone" maxlength="11" id="admin_phone" class="form-control" value="" />
 						</div>
 					</div>
 					<div class="form-group">
@@ -69,7 +69,8 @@
 						</label>
 						<div class="col-sm-8" id="dd">
 							<select class="selectpicker form-control organization" id="admin_roles" multiple=”multiple” style="width:36%">						      
-						    </select>
+						    	<option value="">请选择</option>
+							</select>
 						</div>
 					</div>
 					<div class="form-group">
